--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "next-firebase-starter",
+  "name": "preamble-parsing",
   "private": true,
   "version": "1.0.0",
-  "author": "Trinity Christiana",
+  "author": "Andrew Spurlock",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
